<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.binary.giphy.ui.login.LoginActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@null"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ic_logo"
            android:src="@drawable/ic_logo_2"
            android:scaleType="fitCenter"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_app_name"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:layout_marginBottom="30dp"
            android:textSize="24dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/edt_username"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:drawablePadding="16dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/hint_username"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:id="@+id/edt_password"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_edittext"
            android:drawablePadding="16dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reg"
            android:text="@string/btn_reg"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:background="@null"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>

